# Score4

./: .gitignore  .gitmodules  .hgignore
.github/workflows/: automake.yml
Core/: .gitignore  .hgignore  CMakeLists.txt  COPYING  Makefile.am  Score4CoreConfig.cmake.in  configure.ac  run-autoconf  run-cmake  setuplinks.sh
Core/.CMake/: BuildLibraryCommon.cmake  CheckConstExpr.cmake  CheckNullPtr.cmake  CheckOverride.cmake  EnableCxx11.cmake  Makefile.am
Core/.CMake.bak/Modules/: Makefile.am
Core/.M4/: EnableCxx11.m4  LinkerScripts.m4  WithExtPkgs.m4
Core/Include/Score4Core/.Config/: ConfiguredScore4Core.h.in  PreConfigScore4Core.msvc.h
Core/Include/Score4Core/Common/: DateTimeFormat.h  ErrorDetectionCode.h  ProcessManager.h  ProgressCallback.h  Score4CoreSettings.h  Score4Types.h  ScoreInterface.h  TextParser.h
Core/Include/Score4Core/Document/: DocumentFile.h  ScoreDocument.h
Core/Include/Score4Core/Downloader/: HtmlDownloader.h
Core/Lib/: CMakeLists.txt  Makefile.am
Core/Lib/.Config/: CMakeLists.txt
Core/Lib/.LinkerScript/: Common.in  Document.in  Downloader.in  LinkerScripts.m4
Core/Lib/Common/: CMakeLists.txt  DateTimeFormat.cpp  ErrorDetectionCode.cpp  Makefile.am  ProcessManager.cpp  ProgressCallback.cpp  ScoreDocument.cpp  TextParser.cpp
Core/Lib/Common/Tests/: DateTimeFormatTest.cpp  ErrorDetectionCodeTest.cpp  ProcessManagerTest.cpp  ProgressCallbackTest.cpp  Score4CoreSettingsTest.cpp  ScoreDocumentTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Document/: CMakeLists.txt  DocumentFile.cpp  Makefile.am  ScoreDocument.cpp
Core/Lib/Document/Tests/: DocumentFileTest.cpp  ScoreDocumentTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Downloader/: CMakeLists.txt  HtmlDownloader.cpp  Makefile.am
Core/Lib/Downloader/Tests/: HtmlDownloaderTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Tests/: TestDriver.cpp  TestDriver.h
Core/Lib/Tests/.TestsCommon/: CMakeLists.txt
Samples/: Npb2006.csv  SS_Greatest_Nine.csv
Score4Core/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  setuplinks.sh
Score4Core/.CMake/: EnableCxx11.cmake
Score4Core/Include/Score4Core/.Config/: ConfiguredScore4Core.h.in  PreConfigScore4Core.msvc.h
Score4Core/Include/Score4Core/Common/: DateTimeFormat.h  DocumentFile.h  ErrorDetectionCode.h  Score4CoreSettings.h  Score4Types.h  ScoreDocument.h  ScoreInterface.h  TextParser.h
Score4Core/Lib/: .gitignore
Score4Core/Lib/.Config/: Makefile.am
Score4Core/Lib/Common/: CMakeLists.txt  DateTimeFormat.cpp  DocumentFile.cpp  ErrorDetectionCode.cpp  Makefile.am  ScoreDocument.cpp  TextParser.cpp
Score4Core/Lib/Common/Tests/: DateTimeFormatTest.cpp  DocumentFileTest.cpp  ErrorDetectionCodeTest.cpp  Score4CoreSettingsTest.cpp  ScoreDocumentTest.cpp  TestConf.cmake  TestConf.mak
Score4Core/Lib/Tests/: TestDriver.cpp  TestDriver.h
Score4View/: .hgignore  Score4View.sln
Score4View/Score4Core/: ReadMe.txt  Score4Core.vcxproj  Score4Core.vcxproj.filters
Score4View/Score4View/: MainView.Designer.vb  MainView.ja.resx  MainView.resx  MainView.vb  Score4View.vbproj  ScoreView.vb  WinAPI.vb
Score4View/Score4View/My Project/: Application.Designer.vb
Score4View/Score4Wrapper/: DocumentFile.cpp  DocumentFile.h  ReadMe.txt  Score4Types.h  Score4Wrapper.h  Score4Wrapper.vcxproj  Score4Wrapper.vcxproj.filters  ScoreDocument.cpp  ScoreDocument.h  ScoreInterface.cpp  ScoreInterface.h
View/: COPYING  Score4View.sln
View/Cli.Net4.8/: Wrapper.Net48.vcxproj
View/Cli.Net6/: Wrapper.Net60.vcxproj
View/Core/: Core.vcxproj  Core.vcxproj.filters  ReadMe.txt
View/View/: AppCommon.vb  EditForm.Designer.vb  EditForm.ja.resx  EditForm.resx  EditForm.vb  LineView.Designer.vb  LineView.ja.resx  LineView.resx  LineView.vb  MainView.Designer.vb  MainView.ja.resx  MainView.resx  MainView.vb  ScoreView.vb  StringOperation.vb  View.vbproj  WinAPI.vb
View/View/My Project/: Application.myapp  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb  app.manifest
View/Wrapper/: AssemblyInfo.cpp  ConvertManageType.cpp  ConvertManageType.h  DocumentFile.cpp  DocumentFile.h  ReadMe.txt  Score4Types.h  Score4Wrapper.cpp  ScoreDocument.cpp  ScoreDocument.h  ScoreInterface.cpp  ScoreInterface.h  Stdafx.cpp  Wrapper.vcxproj
