
##
##    List of Directories.
##

SUBDIRS         =  Modules
DIST_SUBDIRS    =  $(SUBDIRS)

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    BuildLibraryCommon.cmake  \
    CheckConstExpr.cmake      \
    CheckNullPtr.cmake        \
    CheckOverride.cmake       \
    EnableCxx11.cmake

